# dancing-pet

./: .gitignore  README.md  RELEASING.md  build_app.sh  dev.sh  gen_waabi.swift  main.swift  probe_dock.swift  probe_dock_ax.swift  setup_signing.sh
.github/workflows/: build.yml
macos-swift/: AppIcon.icns  build_app.sh  dev.sh  gen_icon.swift  main.swift
tauri/: index.html  package-lock.json  package.json
tauri/scripts/: macos-adhoc-sign.sh  sync-assets.mjs
tauri/src/: assets.ts  main.ts  pet.ts  render.ts  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  platform.rs
